--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,11 @@
     "C_Cpp.default.configurationProvider": "particle.particle-vscode-core",
     "cortex-debug.openocdPath": "${command:particle.getDebuggerOpenocdPath}",
     "files.associations": {
-        "*.ino": "cpp"
+        "*.jscad": "javascript",
+        "*.h": "cpp",
+        "*.ino": "cpp",
+        "cmath": "cpp",
+        "cstdlib": "cpp"
     },
     "particle.targetDevice": "230026001347343432313031",
     "particle.firmwareVersion": "1.4.4",
